# Advent_of_Code_Go

./: .gitignore  README.md
2021/cpp/: meson.build
2021/cpp/day1/: day1_A.cpp  meson.build
2021/cpp/day2/: day2.cpp  meson.build
2022/Day_1/: day_1.go
2022/Day_2/: day_2.go
2022/Day_3/: day_3.go
2022/Day_4/: day_4.go
